--- a/config/paradigm/critique.yaml
+++ b/config/paradigm/critique.yaml
@@ -23,7 +23,7 @@ prior_work_doc_types:
   - understanding
 
 # Scenario routing - critique routes to critique scenario
-scenario: critique
+scenario: critique_dialogue
 scenarios_by_approach: {}
 
 # Prompts for each phase
